2018-09-11  Araki Ken  <arakiken@users.sf.net>

	* cocoa/lipo.sh, mlterm-ios.app/Info.plist: Added.

	* ui_scrollbar.c: sb->current_row is reset in window_resized.

	* ui_screen.[ch]:
	  - grab_scroll is added to ui_screen_t.
	  - bs_scroll_upward() and bs_scroll_downward() are swapped in flick scrolling.

	* cocoatouch.m: Function keys are ingored in insertText().

	* android/jni/ui_event_source.c, cocoa.m, cocoatouch.m, sdl2/ui_display.c:
	  If vt_term_is_backscrolling() is true, update_ime_text() does nothing.

2018-09-09  Araki Ken  <arakiken@users.sf.net>

	* README.cocoatouch: Updated.

	* cocoatouch.m:
	  - AppDelegate_{iPhone|iPad} => AppDelegate
	  - UIWindow is manually allocated in AppDelegate::application().
	  - keyCommands() is implemented.

	* mlterm-cocoa.m: AppDelegate class is specified in calling UIApplicationMain().

	* mlterm-icon.app/mlterm-Info.plist, Makefile: Added.

	* mlterm-icon.app/Info.plist, MainWindow_{iPad|iPhone}.{nib|xib}: Removed.

2018-09-06  Araki Ken  <arakiken@users.sf.net>

	* configure.in: -mios-simulator-version-min option is added to $CC
	  on iOS SDK 5.0 or later.

	* cocoa/build-iossim43.sh: Renamed from build-iossim.sh

	* cocoa/build-ios43.sh: Renamed from build-ios.sh

	* cocoa/build-iossim71.sh, mlterm-ios.app/MainWindow_{iPad|iPhone}.xib: Added.

	* cocoatouch.m, vt_pty_unix.c: Minor fixes.

2018-09-03  Araki Ken  <arakiken@users.sf.net>

	* ui_screen.c: Right key scrolls upward and left key scrolls downward
	  in scrolling mode.

2018-09-02  Araki Ken  <arakiken@users.sf.net>

	* README.android, doc/en/PROTOCOL: Updated.

	* ui_screen.[ch]:
	  - 'size' is added to arguments of bs_scroll_{up|down}ward().
	  - bs_{half_}page_{up|down}ward() are defined as macros instead of functions.
	  - flick_time, flick_y and autoscroll_count are added to ui_screen_t if
	    FLICK_SCROLL is defined.
	  - If screen->autoscroll_count != 0, idling() scrolls screen.
	  - "autoscroll" is added to ui_screen_exec_cmd().
