@@ -1,3 +1,7 @@
+2018-09-13  Araki Ken  <arakiken@users.sf.net>
+
+	* ui_screen.c: Segfault on Android in scrolling by flick is fixed.
+
 2018-09-11  Araki Ken  <arakiken@users.sf.net>
 
 	* cocoa/lipo.sh, mlterm-ios.app/Info.plist: Added.
